--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -1,3 +1,37 @@
+:root {
+
+    /* ============================================
+       COLORS
+       ============================================ */
+       --colorPrimary:;
+
+    /* ============================================
+       Dimensions
+       ============================================ */
+       --headerHeight:;
+       --footerHeight:;
+
+       /* ============================================
+       Fonts
+       ============================================ */
+        --fontPrimary:;
+
+        --fontSizeNormal:;
+        --fontSizeLarge:;
+        --fontSizeHyperlink:;
+
+
+    /* ============================================
+       Animations
+       ============================================ */
+        --navButtonHoverTransitionTime: 1.33s;
+}
+
+
+
+
+/* hunain 10.27.25. i dont think this belongs here 
+
 /* Main h1 heading styling */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 h1 {
