--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -1,30 +1,34 @@
 :root {
-
+/* what-where-used
     /* ============================================
        COLORS
        ============================================ */
-       --colorPrimary:;
+       --color-primary:#b54dbc;
 
     /* ============================================
        Dimensions
        ============================================ */
-       --headerHeight:;
-       --footerHeight:;
+       --height:;
+       
 
        /* ============================================
        Fonts
        ============================================ */
         --fontPrimary:;
 
-        --fontSizeNormal:;
-        --fontSizeLarge:;
-        --fontSizeHyperlink:;
+        /* [] hunain to tie this to html bracket names
+        --font-size-title: ;
+        --font-size-subheading: ;
+        --font-size-normal: ; /* all normal text
+        --font-size-hyperlinks: ; /* for nav links and footer links */
+
 
 
     /* ============================================
        Animations
        ============================================ */
         --navButtonHoverTransitionTime: 0.33s;
+        --transition-time-hover: 0.33s;
 }
 
 
