--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,6 @@
 
+@import url('variables.css');
+
 @import url('components/style.css'); 
 
 @import url('components/header.css');
@@ -7,11 +9,14 @@
 
 @import url('components/buttons.css');
 
-@import url('variables.css');
+@import url('components/forms.css');
+
+@import url('components/cards.css');
+
+
 
 @import url('layout/grid.css');
 
-@import url('layout/cards.css');
+@import url('layout/containers.css');
 
-
-/* add all css here 
+@import url('layout/responsive.css');
