--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,22 +1,14 @@
-
 @import url('variables.css');
+@import url('typography.css');
+
 
 @import url('components/style.css'); 
-
 @import url('components/header.css');
-
 @import url('components/footer.css');
-
 @import url('components/buttons.css');
-
 @import url('components/forms.css');
-
 @import url('components/cards.css');
 
-
-
 @import url('layout/grid.css');
-
 @import url('layout/containers.css');
-
 @import url('layout/responsive.css');
