--- a/CSS/main.css
+++ b/CSS/main.css
@@ -9,6 +9,6 @@
 @import url('components/forms.css');
 @import url('components/cards.css');
 
-@import url('layout/gridtest.css');
+@import url('layout/grid.css');
 @import url('layout/containers.css');
 @import url('layout/responsive.css');
