--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,7 +11,6 @@
 
 @import url('layout/grid.css');
 @import url('layout/containers.css');
-/* @import url('layout/responsive.css'); */
-
+@import url('layout/responsive.css');
 
 
