media no longer erroring, fixing logo media to reflect the same

--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -8,7 +8,7 @@
             
             <div class="footer-logo">
                 <a href="index.html">
-                    <img src="{{mediaPath}}media/lhoklogo.png" alt="LHOK Logo">
+                    <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
                 </a>
             </div>
             
