--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -6,7 +6,7 @@
         
         <div class="logo">
             <a href="index.html">
-                <img src="{{mediaPath}}media/lhoklogo.png" alt="LHOK Logo">
+                <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
             </a>
         </div>
         
