--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,6 +8,7 @@
 @import url('components/buttons.css');
 @import url('components/forms.css');
 @import url('components/cards.css');
+@import url('components/gridtest.css');
 
 @import url('layout/grid.css');
 @import url('layout/containers.css');
