--- a/CSS/main.css
+++ b/CSS/main.css
@@ -9,9 +9,9 @@
 @import url('components/forms.css');
 @import url('components/cards.css');
 @import url('components/gridtest.css');
-
 @import url('layout/grid.css');
 @import url('layout/containers.css');
 @import url('layout/responsive.css');
 
 
+@import url('pages/contact-us.css');
