--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -16,6 +16,11 @@
                 <a href="contact-us.html" class="footer-nav-link">Contact Us</a>
                 <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Start Lhoking</a>
             </div>
+
+            <div class="footer-links-right">
+                <a href="terms-and-conditions.html" class="footer-nav-link">Terms and Conditions</a>
+            </div>
+
         </div>
         
         <div class="footer-bottom">
