Jenn added footer nav link for privacy policy

--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -4,6 +4,7 @@
             <div class="footer-links-left">
                 <a href="index.html" class="footer-nav-link">Home</a>
                 <a href="about-us.html" class="footer-nav-link">About Us</a>
+                <a href="privacy-policy.html" class="footer-nav-link">Privacy Policy</a>
             </div>
             
             <div class="footer-logo">
